<resources>
    <string name="app_name_temp">NEO LN</string>
    <string name="app_name">NEO</string>
    <string name="app_name_qa">NEO-QA</string>
    <string name="app_name_uat">NEO-UAT</string>
    <string name="action_logout">Sign Out</string>
    <string name="action_switch_user">Switch Role</string>
    <string name="default_title">Mobilization</string>
    <string name="sign_out">Sign out from app?</string>
    <string name="exit_app">Exit from app?</string>
    <string name="server_mode">Please choose a server environment</string>
    <string name="allowed_char_name">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="allowed_char_email">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890._@-</string>
    <string name="allowed_char_default">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 1234567890.,#-_</string>
    <string name="brandon_reg">Brandon_reg</string>
    <string name="brandon_bold">BrandonText_Bold</string>
    <string name="brandon_light">BrandonText_Light</string>
    <string name="georgia">Georgia</string>
    <string name="no_permission">Please grant the required permissions to use the app.</string>
    <string name="powered">Powered by</string>
    <string name="sign_in">Sign In</string>
    <string name="otp_verification">VERIFY OTP</string>
    <string name="enterotp">Enter OTP here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="stuent_app">Student App</string>
    <string name="qm_salutation">*Salutation</string>
    <string name="q_salutation">Salutation</string>
    <string name="f_name">*First Name</string>
    <string name="m_name">Middle Name</string>
    <string name="l_name">Last Name</string>
    <string name="mobile">*Mobile Number</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="search_c_name">Search by Candidate Name</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="choose_prac">Choose Practice</string>
    <string name="choose_center">Choose Center</string>
    <string name="choose_course">Course Preference</string>
    <string name="cand_list">Candidate List</string>
    <string name="practice">Practice</string>
    <string name="course">Course</string>
    <string-array name="cand_status">
        <item>Pending</item>
        <item>Completed</item>
        <item>Not Eligible</item>
        <item>Still In Enquiry</item>
    </string-array>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string-array name="salutation">
        <item>--Select--</item>
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Miss.</item>
    </string-array>
    <string name="new_version_available">Newer version of this application is available on Google Play Store.\n\nKindly update the app to continue.</string>
    <string name="update_now">Update Now</string>
    <string name="update_later">No, Later</string>
    <string name="important">Important</string>
    <string name="validate">Validate</string>
    <string name="validate_mobile">Send SMS</string>
    <string name="validate_email">Check Duplication</string>
    <string name="verify">Verify</string>
    <string name="verify2">Verify Contact No using</string>
    <string name="resend">Resend SMS</string>
    <string name="otp">Reg. Number</string>
    <string name="resend_link">Resend SMS</string>
    <string name="verify_web">Verify Web Link</string>
    <string name="or">(OR)</string>
    <string name="web">Web Link</string>
    <string name="exit">Exit</string>
    <string name="sdcardpath">/NEO/data/</string>
    <string name="refresh">Refresh</string>
    <string name="history">History</string>
    <string name="requestid">Enter the requestid</string>
    <string name="rateperbatch">Rate&#47;Batch</string>
    <string name="transport_expense">Transport Expenses</string>
    <string name="other_expense">Other Expenses</string>
    <string name="saveas">Save As Draft</string>
    <string name="num_sessions">No. of Sessions Selected : "</string>
    <string name="stud_count">Enter the number of candidates present for this training session</string>
    <string name="ip_error">Invalid entry</string>
    <string name="mark_attend">Please mark attendance for the candidates present in this training session</string>
    <string name="group_pic">Please click group photos of all candidates present in this training session</string>
    <string name="image_evidence">Please click relevant photos of this training session</string>
    <string name="video_evidence">Please record videos of duration 60–90seconds only</string>
    <string name="search_batch">Search by Batch Code</string>
    <string-array name="batch_status">
        <item>Completed</item>
        <item>Ongoing</item>
        <item>Scheduled</item>
    </string-array>
    <string name="batch">Batch</string>
    <string name="image_label">Enter image description</string>
    <string name="session_plan">Session Plan</string>
    <string name="module">Module</string>
    <string-array name="session_status">
        <item>All</item>
        <item>In Progress</item>
        <item>Not Started</item>
    </string-array>
    <string name="search_s_name">Search by Session Name</string>
    <string name="proceed">Proceed</string>
    <string name="mclg">MCLG</string>
    <string name="tma">TMA</string>
    <string name="center">Center</string>
    <string name="mobilize">Mobilization</string>
    <string name="register">Registration</string>
    <string name="enrol">Enrollment</string>
    <string name="reenrol">Re-Enrollment</string>
    <string name="train">Training</string>
    <string name="ojt">OJT</string>
    <string name="quality">Quality Monitoring</string>
    <string name="placement">Placement Tracking</string>
    <string name="mobilize_cand">Add New Candidate</string>
    <string name="register_cand">Register Candidate</string>
    <string name="enrol_cand">Enroll Candidate</string>
    <string name="reenrol_cand">Re-Enroll Candidate</string>
    <string name="pend_cand">Pending Candidates</string>
    <string name="comp_cand">Completed Candidates</string>
    <string name="mob_cand">Mobilized Candidates</string>
    <string name="reg_cand">Registered Candidates</string>
    <string name="enr_cand">Enrolled Candidates</string>
    <string name="upload_data">Upload Data</string>
    <string name="save_draft">Save Draft</string>
    <string name="cand_name">Candidate Name</string>
    <string name="cand_mobile">Mobile Number</string>
    <string name="cand_action">Action</string>
    <string name="upload">Upload</string>
    <string name="upload_all">Upload All</string>
    <string name="company_name">*Company Name</string>
    <string name="company_addr">*Address</string>
    <string name="rm_name">*RM Name</string>
    <string name="rm_mobile">*RM Mobile Number</string>
    <string name="rm_email">RM Email Id</string>
    <string name="s_basic_info">Basic Information</string>
    <string name="s_enrolment_info">Enrolment Information</string>
    <string name="s_student_info">Student Information</string>
    <string name="s_present_addr">Present Address</string>
    <string name="s_perm_addr">Permanent Address</string>
    <string name="s_social_protect">Social Protection</string>
    <string name="s_work_exp">Work Experience</string>
    <string name="s_edn_skills">Education &amp; Skills</string>
    <string name="s_family_details">Family Details</string>
    <string name="s_bank_details">Bank Details</string>
    <string name="s_batch_details">Batch Details</string>
    <string name="s_mcl">Mobilization Checklist</string>
    <string name="s_personal">Personal</string>
    <string name="s_professional">Professional</string>
    <string name="s_social_interest">Social Willingness &amp; Interest</string>
    <string name="s_program_req">Program Requirements</string>
    <string name="s_finance">Finance</string>
    <string name="s_health_safety">Health &amp; Safety</string>
    <string name="s_ownership_details">Ownership Details</string>
    <string name="s_docs_req">Documents Required</string>
    <string name="s_she_activities">SHE Activities</string>
    <string name="s_dell_reg">Dell Section</string>
    <string name="q_cand_pic">Candidate Photo</string>
    <string name="qm_dob">*Date of Birth</string>
    <string name="qm_age">*Age</string>
    <string name="qm_primary_contact">*Primary Contact No</string>
    <string name="q_wa_num">Whatsapp Number</string>
    <string name="q_second_contact">Secondary Contact No</string>
    <string name="q_email">Email Id</string>
    <string name="qm_email">*Email Id</string>
    <string name="qm_gender">*Gender</string>
    <string name="q_gender">Gender</string>
    <string name="q_marital_status">*Marital Status</string>
    <string name="q_caste">*Caste</string>
    <string name="q_disability">*Disability Status</string>
    <string name="q_religion">*Religion</string>
    <string name="q_mother_tongue">Mother Tongue</string>
    <string name="q_occupation">Occupation</string>
    <string name="q_annual_income">*Average Monthly income</string>
    <string name="q_source_info">*Source of Information</string>
    <string name="q_interest_course">Interested Course</string>
    <string name="q_product">Product</string>
    <string name="qm_mother_tongue">*Mother Tongue</string>
    <string name="qm_occupation">*Occupation</string>
    <string name="qm_annual_income">*Average monthly Income</string>
    <string name="qm_interest_course">*Interested Course</string>
    <string name="qm_product">*Product</string>
    <string name="qm_cand_pic">*Candidate Photo</string>
    <string name="q_add_family">Add Family Member</string>
    <string name="q_addr_line1">Address Line 1</string>
    <string name="q_addr_line2">Address Line 2</string>
    <string name="q_village">*Village/Ward</string>
    <string name="q_panchayat">Panchayat</string>
    <string name="q_taluk">Taluk\/Block</string>
    <string name="q_pincode">*Pincode</string>
    <string name="q_district">*District</string>
    <string name="q_state">*State</string>
    <string name="q_country">*Country</string>
    <string name="q_same_addr">Same as Present Address</string>
    <string name="qm_addr_line1">*Address Line 1</string>
    <string name="q_aadhar_no">Aadhaar Number</string>
    <string name="q_aadhar_img">Aadhaar Image</string>
    <string name="q_id_type">Identifier Type</string>
    <string name="q_id_no">Identity Number</string>
    <string name="q_doc_copy">Document Copy</string>
    <string name="qm_aadhar_no">*Aadhaar Number</string>
    <string name="qm_aadhar_img">*Aadhaar Image</string>
    <string name="qm_id_type">*Identifier Type</string>
    <string name="qm_id_no">*Identity Number</string>
    <string name="qm_doc_copy">*ID Copy</string>
    <string name="q_emp_type">*Employment Type</string>
    <string name="q_pref_job">*Preferred Job Role</string>
    <string name="q_yrs_exp">*Years of Experience</string>
    <string name="q_relevant_exp">*Relevant Years of Experience</string>
    <string name="q_last_ctc">*Current/Last CTC</string>
    <string name="q_pref_location">*Preferred Location</string>
    <string name="q_will_travel">*Willing to travel?</string>
    <string name="q_work_shift">*Willing to work in shifts?</string>
    <string name="q_bocw_id">Candidate reference code (BOCW Id)</string>
    <string name="q_expect_ctc">*Expected CTC per month</string>
    <string name="btn_update_cand_data">Update Candidate Data</string>
    <string name="btn_update_activity_status">Update Activity Status</string>
    <string name="btn_view_activity_status">View Activity Status</string>
</resources>