<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/tools"
                android:id="@+id/card_view_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="0dp">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="20dp"
                        android:tag="@string/brandon_bold"
                        android:text="@string/s_student_info"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimary" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view_15"
                android:elevation="5dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                card_view:cardPreventCornerOverlap="false"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/item_ll_padding">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/click"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"

                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/click" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="5dp"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/label_size_mini"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Name:"
                        android:layout_gravity="center_vertical"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/label_size_mini" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/mob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp"
                        android:text="Candidte id"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/label_size_mini" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp"
                        android:text="Adrress"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/label_size_mini"
                        android:visibility="visible" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp"
                        android:textColor="@android:color/black"
                        android:text="Mobile"
                        android:textSize="@dimen/label_size_mini"
                        android:visibility="visible" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp"
                        android:textColor="@android:color/black"
                        android:text="Email"
                        android:textSize="@dimen/label_size_mini"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/update_data"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@color/colorSecondary"
                            android:gravity="center"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/btn_update_cand_data"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/label_size"
                            android:visibility="gone" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/update_status"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:background="@color/colorSecondary"
                            android:gravity="center"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/btn_update_activity_status"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/label_size"
                            android:visibility="gone" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/view_status"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:background="@color/colorSecondary"
                            android:gravity="center"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/btn_view_activity_status"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/label_size"
                            android:visibility="gone" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/tools"
                android:id="@+id/card_view_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view"

                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="0dp">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="20dp"
                        android:tag="@string/brandon_bold"
                        android:text="@string/s_enrolment_info"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimary" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/card_view_16"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:scrollbars="none" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>
